--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    // baseurl 및 paths를 설정하여 경로를 설정할 수 있다.
     "baseUrl": ".",
     "paths": {
       "@components/*": ["components/*"]
