노션 데이터베이스 테스트

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     // baseurl 및 paths를 설정하여 경로를 설정할 수 있다.
     "baseUrl": ".",
     "paths": {
-      "@components/*": ["components/*"]
+      "@components/*": ["components/*"],
+      "@styles/*": ["styles/*"]
     },
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
