--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@notionhq/client": "^2.2.5",
     "@prisma/client": "^4.14.1",
     "@types/node": "20.1.4",
